[workspace]
members = [
    "ccmesh",
    "con",
    "opt",
    "cb",
    "ipc",
    "causal",
    "server",
    "tlatools",
    "redis",
    "scheduler",
    "workload",
    "vis",
    "faas"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.8.0"
prost = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hash = "1.1.0"
lazy_static = "1.4.0"
bytes = "1"
bincode = "1.3.3"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "3.2.18", features = ["derive", "env"] }
redis = { git = "https://github.com/mitsuhiko/redis-rs.git", features = ["tokio-comp"] }
hyper = { version = "0.14", features = ["full"] }
rand = "0.8"
zipf = "7.0.0"
either = "1.8.0"
flashmap = "0.1.0"
dashmap = { version = "5.4.0", features = ["serde"] }
fxhash = "0.2.1"
futures = "0.3.25"
once_cell = "1.16.0"
sysinfo = "0.26.8"
flume = "0.10.14"
array-macro = "2.1.5"
ringbuffer = "0.15.0"

[profile.release]
lto = true
debug = 0
