[package]
name = "hz-con"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
either.workspace = true
dashmap.workspace = true
fxhash.workspace = true
flashmap.workspace = true
futures.workspace = true
redis.workspace = true
once_cell.workspace = true
array-macro.workspace = true
rand.workspace = true
bincode.workspace = true
hz-causal = {path = "../causal"}
hz-ipc = {path = "../ipc"}
hz-config = {path = "../config"}
hz-redis = {path = "../redis"}
hz-workload = {path = "../workload"}

[dependencies.uuid]
version = "1.0.0-alpha.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.8"