[package]
name = "hz-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes.workspace = true
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
