[package]
name = "hz-redis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "redis"
path = "bin/redis.rs"

[[bin]]
name = "redis-test"
path = "bin/redis_test.rs"

[[bin]]
name = "redis-bench"
path = "bin/redis_bench.rs"

[[bin]]
name = "redis-init"
path = "bin/redis_init.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
redis.workspace = true
rustc-hash.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hz-ipc = {path = "../ipc"}
hz-config = {path = "../config"}
hz-causal = {path = "../causal"}